crates/metaltile-std/tests/snapshots/steel_msl_snapshots__hadamard_m_m20_f32_msl.snap
---
source: crates/metaltile-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void mt_hadamard_m20(
    const device float *inp [[buffer(0)]],
    device float *out [[buffer(1)]],
    constant float &scale [[buffer(2)]],
    uint3 _tid3  [[thread_position_in_threadgroup]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint3 _lsize3 [[threads_per_threadgroup]],
    uint simd_lane [[thread_index_in_simdgroup]]
) {
    uint tid    = _tid3.x;
    uint tgid_x = _tgid3.x;
    uint lsize  = _lsize3.x;
    threadgroup float buf[20];
    uint signs[20];

    uint v0 = 0u;
    uint v1 = 445473u;
    signs[v0] = v1;
    uint v2 = 1u;
    uint v3 = 859202u;
    signs[v2] = v3;
    uint v4 = 2u;
    uint v5 = 702596u;
    signs[v4] = v5;
    uint v6 = 3u;
    uint v7 = 389384u;
    signs[v6] = v7;
    uint v8 = 4u;
    uint v9 = 747024u;
    signs[v8] = v9;
    uint v10 = 5u;
    uint v11 = 641086u;
    signs[v10] = v11;
    uint v12 = 6u;
    uint v13 = 234589u;
    signs[v12] = v13;
    uint v14 = 7u;
    uint v15 = 469147u;
    signs[v14] = v15;
    uint v16 = 8u;
    uint v17 = 938263u;
    signs[v16] = v17;
    uint v18 = 9u;
    uint v19 = 828943u;
    signs[v18] = v19;
    uint v20 = 10u;
    uint v21 = 984492u;
    signs[v20] = v21;
    uint v22 = 11u;
    uint v23 = 953176u;
    signs[v22] = v23;
    uint v24 = 12u;
    uint v25 = 889521u;
    signs[v24] = v25;
    uint v26 = 13u;
    uint v27 = 762211u;
    signs[v26] = v27;
    uint v28 = 14u;
    uint v29 = 508614u;
    signs[v28] = v29;
    uint v30 = 15u;
    uint v31 = 34194u;
    signs[v30] = v31;
    uint v32 = 16u;
    uint v33 = 68357u;
    signs[v32] = v33;
    uint v34 = 17u;
    uint v35 = 135722u;
    signs[v34] = v35;
    uint v36 = 18u;
    uint v37 = 270452u;
    signs[v36] = v37;
    uint v38 = 19u;
    uint v39 = 540873u;
    signs[v38] = v39;
    auto v_t = simd_lane;
    auto v_row = tgid_x;
    uint v42 = 20u;
    auto v_tg = ((v_row * v42) + v_t);
    auto v45 = inp[v_tg];
    float v_inp_f = static_cast<float>(v45);
    buf[v_t] = v_inp_f;
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_signs_t = signs[v_t];
    auto v48 = 0.0f;
    auto __ml_acc = v48;
    uint v49 = 0u;
    uint v50 = 20u;
    uint v51 = 1u;
    uint v53 = 1u;
    for (uint i_0 = v49; i_0 < v50; i_0 += v51) {
        auto v56 = 2.0f;
        auto v_bit = static_cast<float>(((v_signs_t >> i_0) & v53));
        auto v58 = 1.0f;
        auto v_buf_j = buf[i_0];
        auto v61 = __ml_acc;
        auto v62 = (((v56 * v_bit) - v58) * v_buf_j);
        auto v63 = v61 + v62;
        __ml_acc = v63;
    }
    auto v64 = __ml_acc;
    auto v65 = scale;
    auto v67 = static_cast<float>((v64 * v65));
    out[v_tg] = v67;
}
