crates/metaltile-std/tests/snapshots/steel_msl_snapshots__steel_gemm_fused_nax_f16_msl.snap
---
source: crates/metaltile-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
#include <metal_simdgroup>
#include <MetalPerformancePrimitives/MetalPerformancePrimitives.h>
#endif

kernel void mt_steel_gemm_fused_nax(
    const device half *a [[buffer(0)]],
    const device half *b [[buffer(1)]],
    device half *out [[buffer(2)]],
    constant uint &k [[buffer(3)]],
    constant uint &n [[buffer(4)]],
    uint3 _tid3  [[thread_position_in_threadgroup]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint3 _lsize3 [[threads_per_threadgroup]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
    uint tid    = _tid3.x;
    uint tgid_x = _tgid3.x;
    uint tgid_y = _tgid3.y;
    uint lsize  = _lsize3.x;
    uint n_simd = lsize / 32u;
    threadgroup half Xs[1152];
    threadgroup half Ws[1152];
    threadgroup float OutScratch[1024];

    auto v_lane = simd_lane;
    uint v_sg = simd_group;
    uint v2 = 32u;
    auto v_lane_in_tg = ((v_sg * v2) + v_lane);
    uint v5 = 2u;
    uint v7 = 1u;
    uint v9 = 16u;
    auto v_sg_m_base = ((v_sg / v5) * v9);
    uint v11 = 16u;
    auto v_sg_n_base = ((v_sg & v7) * v11);
    auto v13 = tgid_y;
    uint v14 = 32u;
    auto v_x_m_base = v13 * v14;
    auto v16 = tgid_x;
    uint v17 = 32u;
    auto v_w_n_base = v16 * v17;
    // --- CoopTileSetup: gemm (16×16×32) ---
    constexpr auto gemm_desc = mpp::tensor_ops::matmul2d_descriptor(
        /*M=*/16, /*N=*/16, /*K=*/32,
        /*ta=*/false, /*tb=*/true, /*tc=*/false,
        mpp::tensor_ops::matmul2d_descriptor::mode::multiply_accumulate);
    mpp::tensor_ops::matmul2d<gemm_desc, metal::execution_simdgroup> gemm_op;
    auto gemm_ct_a = gemm_op.template get_left_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_b = gemm_op.template get_right_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_c = gemm_op.template get_destination_cooperative_tensor<decltype(gemm_ct_a), decltype(gemm_ct_b), float>();
    for (uint16_t _i = 0; _i < gemm_ct_c.get_capacity(); ++_i) gemm_ct_c[_i] = {};
    uint v19 = 4u;
    auto v_x_m_row = v_lane_in_tg / v19;
    uint v21 = 3u;
    auto v_x_k_quad = (v_lane_in_tg & v21);
    uint v23 = 8u;
    auto v_x_k_base = v_x_k_quad * v23;
    uint v25 = 36u;
    auto v26 = v_x_m_row * v25;
    auto v_x_ws_base = v26 + v_x_k_base;
    uint v28 = 36u;
    auto v_xs_sg_off = v_sg_m_base * v28;
    uint v30 = 36u;
    auto v_ws_sg_off = v_sg_n_base * v30;
    uint v32 = 256u;
    auto v_sg_scratch_off = v_sg * v32;
    auto v_b_n = v_w_n_base + v_x_m_row;
    uint v35 = 0u;
    auto v36 = k;
    uint v37 = 32u;
    auto v38 = v_x_m_base + v_x_m_row;
    auto v39 = v38 * v36;
    uint v42 = 0u;
    uint v43 = 8u;
    uint v44 = 1u;
    uint v50 = 0u;
    uint v51 = 8u;
    uint v52 = 1u;
    for (uint i_0 = v35; i_0 < v36; i_0 += v37) {
        auto v40 = v39 + i_0;
        auto v_a_row_dev_base = v40 + v_x_k_base;
        for (uint i_1 = v42; i_1 < v43; i_1 += v44) {
            auto v45 = v_a_row_dev_base + i_1;
            auto v46 = a[v45];
            auto v48 = v_x_ws_base + i_1;
            float v_av = static_cast<float>(v46);
            Xs[v48] = v_av;
        }
        auto v_b_k_base = i_0 + v_x_k_base;
        for (uint i_2 = v50; i_2 < v51; i_2 += v52) {
            auto v54 = n;
            auto v56 = (((v_b_k_base + i_2) * v54) + v_b_n);
            auto v57 = b[v56];
            auto v59 = v_x_ws_base + i_2;
            float v_bv = static_cast<float>(v57);
            Ws[v59] = v_bv;
        }
        threadgroup_barrier(mem_flags::mem_threadgroup);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tA(Xs + v_xs_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_a.load(gemm_tA);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tB(Ws + v_ws_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_b.load(gemm_tB);
        gemm_op.run(gemm_ct_a, gemm_ct_b, gemm_ct_c);
        threadgroup_barrier(mem_flags::mem_threadgroup);
    }
    metal::tensor<threadgroup float, metal::extents<int, 16, 16>, metal::tensor_inline> gemm_tC(OutScratch + v_sg_scratch_off, metal::extents<int, 16, 16>{}); gemm_ct_c.store(gemm_tC);
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_out_n_base = v_w_n_base + v_sg_n_base;
    uint v62 = 2u;
    auto v_o_row = v_lane / v62;
    uint v64 = 1u;
    auto v65 = (v_lane & v64);
    uint v66 = 8u;
    auto v_o_col_base = v65 * v66;
    uint v68 = 0u;
    uint v69 = 8u;
    uint v70 = 1u;
    uint v72 = 16u;
    auto v73 = v_o_row * v72;
    auto v74 = v_sg_scratch_off + v73;
    auto v_out_m_base = v_x_m_base + v_sg_m_base;
    auto v77 = v_out_m_base + v_o_row;
    for (uint i_3 = v68; i_3 < v69; i_3 += v70) {
        auto v_col = v_o_col_base + i_3;
        auto v75 = v74 + v_col;
        auto v_v = OutScratch[v75];
        auto v78 = n;
        auto v80 = v_out_n_base + v_col;
        half v82 = static_cast<half>(v_v);
        auto v81 = ((v77 * v78) + v80);
        out[v81] = v82;
    }
#else
    // Pre-Metal-4 stub: mpp::tensor_ops is unavailable.
#endif
}
