crates/metaltile-std/tests/snapshots/steel_msl_snapshots__steel_gemm_splitk_nax_accum_f32_msl.snap
---
source: crates/metaltile-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void mt_steel_gemm_splitk_accum_nax(
    const device float *partials [[buffer(0)]],
    device float *out [[buffer(1)]],
    constant uint &m [[buffer(2)]],
    constant uint &n [[buffer(3)]],
    constant uint &n_splits [[buffer(4)]],
    uint3 gid [[thread_position_in_grid]]
) {
    auto v_idx = tgid_x;
    auto v1 = m;
    auto v2 = n;
    auto v_total = v1 * v2;
    auto v4 = partials[v_idx];
    auto __ml_acc = v4;
    uint v5 = 1u;
    auto v6 = n_splits;
    uint v7 = 1u;
    for (uint i_0 = v5; i_0 < v6; i_0 += v7) {
        auto v8 = __ml_acc;
        auto v10 = ((i_0 * v_total) + v_idx);
        auto v11 = partials[v10];
        auto v12 = v8 + v11;
        __ml_acc = v12;
    }
    auto v13 = __ml_acc;
    float v14 = static_cast<float>(v13);
    out[v_idx] = v14;
}
