crates/metaltile-std/tests/snapshots/steel_msl_snapshots__steel_gemm_splitk_nax_f16_msl.snap
---
source: crates/metaltile-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
#include <metal_simdgroup>
#include <MetalPerformancePrimitives/MetalPerformancePrimitives.h>
#endif

kernel void mt_steel_gemm_splitk_nax(
    const device half *a [[buffer(0)]],
    const device half *b [[buffer(1)]],
    device float *partials [[buffer(2)]],
    constant uint &m [[buffer(3)]],
    constant uint &k [[buffer(4)]],
    constant uint &n [[buffer(5)]],
    constant uint &k_per_split [[buffer(6)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
    uint tgid_x = _tgid3.x;
    uint tgid_y = _tgid3.y;
    uint tgid_z = _tgid3.z;
    threadgroup half Xs[1152];
    threadgroup half Ws[1152];
    threadgroup float OutScratch[1024];

    auto v_lane = simd_lane;
    uint v_sg = simd_group;
    uint v2 = 32u;
    auto v_lane_in_tg = ((v_sg * v2) + v_lane);
    uint v5 = 2u;
    uint v7 = 1u;
    uint v9 = 16u;
    auto v_sg_m_base = ((v_sg / v5) * v9);
    uint v11 = 16u;
    auto v_sg_n_base = ((v_sg & v7) * v11);
    auto v13 = tgid_y;
    uint v14 = 32u;
    auto v_x_m_base = v13 * v14;
    auto v16 = tgid_x;
    uint v17 = 32u;
    auto v_w_n_base = v16 * v17;
    auto v_split = tgid_z;
    auto v20 = k_per_split;
    auto v_k_start = v_split * v20;
    auto v23 = k;
    auto v25 = m;
    auto v27 = n;
    auto v_part_base = ((v_split * v25) * v27);
    // --- CoopTileSetup: gemm (16×16×32) ---
    constexpr auto gemm_desc = mpp::tensor_ops::matmul2d_descriptor(
        /*M=*/16, /*N=*/16, /*K=*/32,
        /*ta=*/false, /*tb=*/true, /*tc=*/false,
        mpp::tensor_ops::matmul2d_descriptor::mode::multiply_accumulate);
    mpp::tensor_ops::matmul2d<gemm_desc, metal::execution_simdgroup> gemm_op;
    auto gemm_ct_a = gemm_op.template get_left_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_b = gemm_op.template get_right_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_c = gemm_op.template get_destination_cooperative_tensor<decltype(gemm_ct_a), decltype(gemm_ct_b), float>();
    for (uint16_t _i = 0; _i < gemm_ct_c.get_capacity(); ++_i) gemm_ct_c[_i] = {};
    uint v29 = 4u;
    auto v_x_m_row = v_lane_in_tg / v29;
    uint v31 = 3u;
    uint v33 = 8u;
    auto v_x_k_quad = (v_lane_in_tg & v31);
    auto v_x_k_base = v_x_k_quad * v33;
    uint v35 = 36u;
    auto v36 = v_x_m_row * v35;
    auto v_x_ws_base = v36 + v_x_k_base;
    uint v38 = 36u;
    auto v_xs_sg_off = v_sg_m_base * v38;
    uint v40 = 36u;
    auto v_ws_sg_off = v_sg_n_base * v40;
    uint v42 = 256u;
    auto v_sg_scratch_off = v_sg * v42;
    auto v_b_n = v_w_n_base + v_x_m_row;
    auto v46 = v_x_m_base + v_x_m_row;
    auto v47 = v46 * v23;
    uint v50 = 0u;
    uint v51 = 8u;
    uint v52 = 1u;
    uint v58 = 0u;
    uint v59 = 8u;
    uint v60 = 1u;
    auto v_k_end = min((v_k_start + v20), v23);
    uint v45 = 32u;
    for (uint i_0 = v_k_start; i_0 < v_k_end; i_0 += v45) {
        auto v48 = v47 + i_0;
        auto v_a_row_dev_base = v48 + v_x_k_base;
        for (uint i_1 = v50; i_1 < v51; i_1 += v52) {
            auto v53 = v_a_row_dev_base + i_1;
            auto v54 = a[v53];
            auto v56 = v_x_ws_base + i_1;
            float v_av = static_cast<float>(v54);
            Xs[v56] = v_av;
        }
        auto v_b_k_base = i_0 + v_x_k_base;
        for (uint i_2 = v58; i_2 < v59; i_2 += v60) {
            auto v63 = (((v_b_k_base + i_2) * v27) + v_b_n);
            auto v64 = b[v63];
            auto v66 = v_x_ws_base + i_2;
            float v_bv = static_cast<float>(v64);
            Ws[v66] = v_bv;
        }
        threadgroup_barrier(mem_flags::mem_threadgroup);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tA(Xs + v_xs_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_a.load(gemm_tA);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tB(Ws + v_ws_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_b.load(gemm_tB);
        gemm_op.run(gemm_ct_a, gemm_ct_b, gemm_ct_c);
        threadgroup_barrier(mem_flags::mem_threadgroup);
    }
    metal::tensor<threadgroup float, metal::extents<int, 16, 16>, metal::tensor_inline> gemm_tC(OutScratch + v_sg_scratch_off, metal::extents<int, 16, 16>{}); gemm_ct_c.store(gemm_tC);
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_out_n_base = v_w_n_base + v_sg_n_base;
    uint v69 = 2u;
    auto v_o_row = v_lane / v69;
    uint v71 = 1u;
    uint v73 = 8u;
    auto v72 = (v_lane & v71);
    auto v_o_col_base = v72 * v73;
    uint v79 = 16u;
    auto v80 = v_o_row * v79;
    auto v81 = v_sg_scratch_off + v80;
    auto v85 = (((v_x_m_base + v_sg_m_base) + v_o_row) * v27);
    auto v86 = v_part_base + v85;
    uint v75 = 0u;
    uint v76 = 8u;
    uint v77 = 1u;
    for (uint i_3 = v75; i_3 < v76; i_3 += v77) {
        auto v_col = v_o_col_base + i_3;
        auto v82 = v81 + v_col;
        auto v_v = OutScratch[v82];
        auto v87 = v_out_n_base + v_col;
        auto v88 = v86 + v87;
        partials[v88] = v_v;
    }
#else
    // Pre-Metal-4 stub: mpp::tensor_ops is unavailable.
#endif
}
